Add crud for back end users and front end users can update their profile

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,6 +33,7 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_COACH }
         - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/user, roles: ROLE_ADMIN }
         - { path: ^/, roles: ROLE_USER }
 
     role_hierarchy:
