set up mailer and forgot password features

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -12,3 +12,11 @@ controllers_back:
 controller_security:
     resource: ../src/Controller/SecurityController.php
     type: attribute
+
+controller_mail:
+    resource: ../src/Controller/MailerController.php
+    type: attribute
+
+controller_reset_password:
+    resource: ../src/Controller/ResetPasswordController.php
+    type: attribute
