--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
         "@symfony/webpack-encore": "^4.0.0",
         "autoprefixer": "^10.4.13",
         "core-js": "^3.23.0",
-        "postcss": "^8.4.20",
+        "file-loader": "^6.2.0",
+        "flowbite": "^1.6.3",
+        "daisyui": "^2.50.1",
+        "postcss": "^8.4.21",
         "postcss-loader": "^7.0.2",
         "regenerator-runtime": "^0.13.9",
         "tailwindcss": "^3.2.4",
